// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sale type artworksConnection returns data from gravity 1`] = `
Object {
  "sale": Object {
    "artworksConnection": Object {
      "edges": Array [
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
      },
    },
  },
}
`;

exports[`Sale type saleArtworksConnection returns data from gravity 1`] = `
Object {
  "sale": Object {
    "saleArtworksConnection": Object {
      "edges": Array [
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
        Object {
          "node": Object {
            "slug": "some-id",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
      },
    },
  },
}
`;
